--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -37,8 +37,8 @@
                       </td>
                       <td>{{myDataset.filename}}</td>
                       
-                      <td *ngIf="(myDataset.export)"><i class="material-icons iconFont" (click)="requestMail('','Dataset publish Mail', myDataset.filename)" >exit_to_app</i></td>
-                      <td *ngIf="!(myDataset.export) || (myDataset.export)=='false'"><i class="material-icons iconFont material-icons md-dark md-inactive" >exit_to_app</i></td>
+                      <td *ngIf="myDataset.export=='true'"><i class="material-icons iconFont" (click)="requestExport('','Dataset export Mail', myDataset.filename)" >exit_to_app</i></td>
+                      <td *ngIf="!myDataset.export || myDataset.export=='false'"><i class="material-icons iconFont material-icons md-dark md-inactive" >exit_to_app</i></td>
                       <td *ngIf="myDataset.publish=='true'"><i class="material-icons iconFont"  (click)="requestMail('','Dataset publish Mail', myDataset.filename)">cloud_upload</i></td>
                       <td *ngIf="!myDataset.publish || myDataset.publish=='false'"><i class="material-icons iconFont material-icons md-dark md-inactive">cloud_upload</i></td>
                   </tr>
