Integrated changes with trusted status

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.css
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.css
@@ -37,3 +37,5 @@ mat_tab_style{
       background-color: #025aa5;
       border-color: #01549b;
 }
+
+.panel-div {max-height:150px;overflow:scroll;}
