--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -22,6 +22,9 @@
             <a class="nav-link" [routerLink]="['/account/datasets']">DATASETS &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
+            <a class="nav-link" [routerLink]="['/account/exportrequests']">EXPORT REQUESTS &emsp; &nbsp;|</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link" [routerLink]="['/account/workstation']">WORKSTATIONS &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
