--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -6,9 +6,9 @@
   </h3>
 </div>
 
-<div class="container">
+<div class="container" style="width:1278px;">
   <mat-card>
-    <div class="row">
+    <div class="row" style="width:1200px;">
       <h3>My Workstations</h3>
         <span>Workstations are Windows or linux Virtual Machines (VMs), which provide a mechanism for SDC users to access the datasets assigned to them or their own datasets, and perform analytics on the data</span><hr>
       <mat-card-content style="max-height: 300px;overflow-y: scroll">
@@ -18,6 +18,7 @@
             <th>#</th>
             <th>Stack Name</th>
             <th>Applications</th>
+            <th>Configuration</th>
             <th>Action</th>
             <th></th>
           </tr>
@@ -28,6 +29,7 @@
               <td>{{ i }}</td>
               <td  style="width:200px;">{{ stack.display_name }}</td>
               <td style="width:500px;"> {{stack.application}} </td>
+              <td style="width:200px;"> {{stack.configuration}} </td>
               <td>
                 <div *ngIf="!stack.instance_id">
                   <span>  ----</span>
