--- a/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
+++ b/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
@@ -28,15 +28,30 @@
                       <td>{{exportFileRequest.team}}</td>
                       <td>{{exportFileRequest.dataset}}</td>
                       <td><a style="cursor:pointer;" (click)="requestDownload(exportFileRequest)">{{exportFileRequest.reviewFile}}</a></td>
-                      <td>
-                            <i class="material-icons iconFont" (click)="submitApproval('TrustedApproved',exportFileRequest)" >done</i><i class="material-icons iconFont" (click)="submitApproval('TrustedRejected',exportFileRequest)" >close</i>
-                        <!--<button class="btn btn-primary dotBtn"  (click)="submitApproval('TrustedApproved',exportFileRequest)" >Approve</button><button class="btn btn-primary dotBtn"  (click)="submitApproval('TrustedRejected',exportFileRequest)">Reject</button></td>-->
-                     
+                      <td >
+                           <div *ngIf="exportFileRequest.RequestReviewStatus == 'Submitted'"> <i class="material-icons iconFont" (click)="submitApproval('TrustedApproved',exportFileRequest)" >done</i><i class="material-icons iconFont" (click)="submitApproval('TrustedRejected',exportFileRequest)" >close</i></div>
+                           <div *ngIf="exportFileRequest.RequestReviewStatus == 'TrustedApproved'">
+                                <p-message severity="success" text="{{exportFileRequest.RequestReviewStatus}}"></p-message> 
+                            </div> 
+                            <div *ngIf="exportFileRequest.RequestReviewStatus == 'TrustedRejected'">
+                                    <p-message severity="error" text="{{exportFileRequest.RequestReviewStatus}}"></p-message> 
+                            </div>
+                           <!--<button class="btn btn-primary dotBtn"  (click)="submitApproval('TrustedApproved',exportFileRequest)" >Approve</button><button class="btn btn-primary dotBtn"  (click)="submitApproval('TrustedRejected',exportFileRequest)">Reject</button></td>-->
+                       </td>     
                         <td>
-                                <i class="material-icons iconFont" (click)="submitApproval('Approved',exportFileRequest)" >done</i><i class="material-icons iconFont" (click)="submitApproval('Rejected',exportFileRequest)" >close</i>
-                                
+                            <div *ngIf="exportFileRequest.RequestReviewStatus == 'Submitted'"><i class="material-icons iconFont" (click)="submitApproval('Approved',exportFileRequest)" >done</i><i class="material-icons iconFont" (click)="submitApproval('Rejected',exportFileRequest)" >close</i></div>
+                           
+                            <div *ngIf="exportFileRequest.RequestReviewStatus == 'Approved'">
+                                    <p-message severity="success" text="{{exportFileRequest.RequestReviewStatus}}"></p-message> 
+                            </div> 
+                            <div *ngIf="exportFileRequest.RequestReviewStatus == 'Rejected'">
+                                        <p-message severity="error" text="{{exportFileRequest.RequestReviewStatus}}"></p-message> 
+                            </div>
                             <!--<button class="btn btn-primary dotBtn"  (click)="submitApproval('Approved',exportFileRequest)">Approve</button><button class="btn btn-primary dotBtn"  (click)="submitApproval('Rejected',exportFileRequest)">Reject</button></td>-->
-                      <td>
+                        </td>
+                        
+                        <td>
+
                         <i class="material-icons iconFont" (click)="renderApprovalForm(exportFileRequest)">insert_drive_file</i>
                       </td>
                   </tr>
@@ -69,8 +84,15 @@
                     <td>{{trustedRequest.userFullName}}</td>
                     <td>{{trustedRequest.dataset}}</td>
                     <td>
-                        <i class="material-icons iconFont" (click)="submitTrustedApproval('Trusted',trustedRequest.userFullName,trustedRequest.dataset)" >done</i><i class="material-icons iconFont" (click)="submitTrustedApproval('NonTrusted',trustedRequest.userFullName,trustedRequest.dataset)" >close</i>
-                </tr>
+                        <div *ngIf="trustedRequest.TrustedStatus == 'Submitted'"> <i class="material-icons iconFont" (click)="submitTrustedApproval('Trusted',trustedRequest.userFullName,trustedRequest.dataset)" >done</i><i class="material-icons iconFont" (click)="submitTrustedApproval('NonTrusted',trustedRequest.userFullName,trustedRequest.dataset)" >close</i></div>
+                        <div *ngIf="trustedRequest.TrustedStatus == 'Trusted'">
+                                <p-message severity="success" text="{{trustedRequest.TrustedStatus}}"></p-message> 
+                        </div> 
+                        <div *ngIf="trustedRequest.TrustedStatus == 'NonTrusted'">
+                                    <p-message severity="error" text="{{trustedRequest.TrustedStatus}}"></p-message> 
+                        </div>
+                    </td>        
+                    </tr>
             </ng-template>
         </p-table>
         <hr />
