--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -236,7 +236,7 @@
     </mat-tab>
     <mat-tab label="Approval Form" #tab2 [disabled]='selectedIndex==0'>
       <br>
-      <p><b>Please provide additional information pertaining to your request for exporting data, by filling out the fields below. These details will be shared with the data provider to help them review our request and provide their decision.</b></p>
+      <p><b>Please provide additional information pertaining to your request for exporting data, by filling out the fields below. These details will be shared with the data provider to help them review your request and provide their decision.</b></p>
       <br>
       <label style="float:right"> * All fields are mandatory </label>
       <hr>
