--- a/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
+++ b/webportal/webapp/src/app/account/exportrequests/exportrequests.component.html
@@ -28,16 +28,7 @@
                       <td>{{exportFileRequest.team}}</td>
                       <td>{{exportFileRequest.dataset}}</td>
                       <td><a style="cursor:pointer;word-break:break-all;" (click)="requestDownload(exportFileRequest)">{{exportFileRequest.reviewFile}}</a></td>
-                      <td >
-                           <div *ngIf="exportFileRequest.RequestReviewStatus == 'Submitted'"> <i class="material-icons iconFont" (click)="submitApproval('TrustedApproved',exportFileRequest)" >done</i><i class="material-icons iconFont" (click)="submitApproval('TrustedRejected',exportFileRequest)" >close</i></div>
-                           <div *ngIf="exportFileRequest.RequestReviewStatus == 'TrustedApproved'">
-                                <p-message severity="success" text="{{exportFileRequest.RequestReviewStatus}}"></p-message> 
-                            </div> 
-                            <div *ngIf="exportFileRequest.RequestReviewStatus == 'TrustedRejected'">
-                                    <p-message severity="error" text="{{exportFileRequest.RequestReviewStatus}}"></p-message> 
-                            </div>
-                           <!--<button class="btn btn-primary dotBtn"  (click)="submitApproval('TrustedApproved',exportFileRequest)" >Approve</button><button class="btn btn-primary dotBtn"  (click)="submitApproval('TrustedRejected',exportFileRequest)">Reject</button></td>-->
-                       </td>     
+                         
                         <td>
                             <div *ngIf="exportFileRequest.RequestReviewStatus == 'Submitted'"><i class="material-icons iconFont" (click)="submitApproval('Approved',exportFileRequest)" >done</i><i class="material-icons iconFont" (click)="submitApproval('Rejected',exportFileRequest)" >close</i></div>
                            
@@ -84,11 +75,11 @@
                     <td>{{trustedRequest.userFullName}}</td>
                     <td>{{trustedRequest.dataset}}</td>
                     <td>
-                        <div *ngIf="trustedRequest.TrustedStatus == 'Submitted'"> <i class="material-icons iconFont" (click)="submitTrustedApproval('Trusted',trustedRequest.userFullName,trustedRequest.dataset)" >done</i><i class="material-icons iconFont" (click)="submitTrustedApproval('NonTrusted',trustedRequest.userFullName,trustedRequest.dataset)" >close</i></div>
+                        <div *ngIf="trustedRequest.TrustedStatus == 'Submitted'"> <i class="material-icons iconFont" (click)="submitTrustedApproval('Trusted',trustedRequest.userFullName,trustedRequest.dataset)" >done</i><i class="material-icons iconFont" (click)="submitTrustedApproval('Untrusted',trustedRequest.userFullName,trustedRequest.dataset)" >close</i></div>
                         <div *ngIf="trustedRequest.TrustedStatus == 'Trusted'">
                                 <p-message severity="success" text="{{trustedRequest.TrustedStatus}}"></p-message> 
                         </div> 
-                        <div *ngIf="trustedRequest.TrustedStatus == 'NonTrusted'">
+                        <div *ngIf="trustedRequest.TrustedStatus == 'Untrusted'">
                                     <p-message severity="error" text="{{trustedRequest.TrustedStatus}}"></p-message> 
                         </div>
                     </td>        
